[package]
name = "rivalcfg-tray"
version = "1.2.1"
# cargo edition, NOT APP
edition = "2024"

[dependencies]
glib = "0.18"
gio = "0.18"
anyhow = "1.0"
tray-icon = { version = "0.19", default-features = false }
image = "0.25"
gdk-pixbuf = "0.18"
gtk = "0.18"
tempfile = "3.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"

# System dependency required for SVG to PNG conversion at runtime:
#   rsvg-convert (usually provided by the librsvg2-bin or librsvg2-tools package)

# XML parsing used to implement robust SVG recoloring for custom icon colors
xmltree = "0.10"

[package.metadata.deb]
depends = ["rivalcfg", "librsvg2-bin", "libgtk-3-0"]
recommends = ["python3-pip"]
maintainer = "Chad Sheridan <chad.sheridan@cysec.ca>"
section = "utils"
priority = "optional"

# Files to include in the .deb from the built package directory (if using a pkg/ layout)
# cargo-deb will package the compiled binary by default; use `assets` to include extra files
assets = [
	["pkg/usr/share/applications/rivalcfg-tray.desktop", "/usr/share/applications/rivalcfg-tray.desktop", "0644"],
	["pkg/usr/share/metainfo/io.github.chadapsheridan.rivalcfgtray.appdata.xml", "/usr/share/metainfo/io.github.chadapsheridan.rivalcfgtray.appdata.xml", "0644"],
	["pkg/usr/share/icons/hicolor/256x256/apps/rivalcfg-tray.png", "/usr/share/icons/hicolor/256x256/apps/rivalcfg-tray.png", "0644"]
]
